// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle summary for 0 expenses 1`] = `
<div>
  <h1>
    Viewing 
    0
     expense(s) totalling 
    0
  </h1>
</div>
`;

exports[`should handle summary for 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense(s) totalling 
    109500
  </h1>
</div>
`;

exports[`should handle summary for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     expense(s) totalling 
    114195
  </h1>
</div>
`;
